# mimchine

./: .gitignore  README.md  pyproject.toml
demo/: mim_fed.docker
mimchine/: __init__.py  cli.py  config.py  containers.py  create_config.py  domain.py  inspection.py  integration.py  log.py  mounts.py  output.py  parsing.py  paths.py  process.py  profiles.py  services.py  shell_helpers.py  shell_state.py  shells.py  smolvm_images.py  state.py
mimchine/builders/: __init__.py  base.py  containers.py
mimchine/runners/: __init__.py  base.py  containers.py  smolvm.py
tests/: test_builders_runners.py  test_cli.py  test_config_profiles.py  test_containers.py  test_domain.py  test_image_archives.py  test_inspection.py  test_mounts.py  test_process.py  test_profiles.py  test_services.py  test_shell_state.py  test_shells.py  test_smolvm_images.py  test_state.py
