[project]
name = "mimchine"
version = "0.25.0"
description = "well integrated mini machines with rootless podman"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "redthing1", email = "redthing1@alt.icu" },
]
dependencies = [
    "minlog>=0.6.0,<0.7.0",
    "platformdirs>=4.2.0,<5.0.0",
    "sh>=2.2.2,<3.0.0",
    "single-source>=0.4.0",
    "typer>=0.15.2,<0.16.0",
]

[project.scripts]
mimchine = "mimchine.__main__:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimchine"]
