[project]
name = "mimchine"
version = "0.32.0"
description = "ergonomic local development machines"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "redthing1", email = "redthing1@alt.icu" },
]
dependencies = [
    "platformdirs==4.9.2",
    "rich==13.9.4",
    "typer==0.15.4",
]

[project.scripts]
mim = "mimchine.__main__:main"
mimchine = "mimchine.__main__:main"

[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimchine"]

[dependency-groups]
build = [
    "hatchling==1.24.2",
]
